tdf#121538 index 1 never existed

Change-Id: I8493685ceab81a2bd07a3fc75b371a0f679695fb
Reviewed-on: https://gerrit.libreoffice.org/63651
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>